contrib/setup_cluster/test/test_output/TC38/logs.out
WARNING:  Modification query is executing in non-autocommit mode. PGSpider might get inconsistent data.
NOTICE:  extension "file_fdw" does not exist, skipping
NOTICE:  extension "pgspider_fdw" does not exist, skipping
NOTICE:  extension "postgres_fdw" does not exist, skipping
NOTICE:  extension "sqlite_fdw" does not exist, skipping
NOTICE:  extension "tinybrace_fdw" does not exist, skipping
NOTICE:  extension "mysql_fdw" does not exist, skipping
NOTICE:  extension "griddb_fdw" does not exist, skipping
NOTICE:  extension "influxdb_fdw" does not exist, skipping
NOTICE:  extension "parquet_s3_fdw" does not exist, skipping
NOTICE:  extension "mongo_fdw" does not exist, skipping
NOTICE:  extension "oracle_fdw" does not exist, skipping
NOTICE:  extension "postgrest_fdw" does not exist, skipping
NOTICE:  extension "odbc_fdw" does not exist, skipping
NOTICE:  extension "jdbc_fdw" does not exist, skipping
NOTICE:  extension "dynamodb_fdw" does not exist, skipping
NOTICE:  extension "sqlumdashcs_fdw" does not exist, skipping
NOTICE:  extension "objstorage_fdw" does not exist, skipping
NOTICE:  extension "pgspider_core_fdw" does not exist, skipping
File:install_util.c Function:query_execute L:147 Msg:GRANT CREATE ON DATABASE pgspider TO ; failed :ERROR:  syntax error at or near ";"
LINE 1: GRANT CREATE ON DATABASE pgspider TO ;
                                             ^

Config directory: ./
Node information file: node_information.json
Node structure file: node_structure.json
Timeout: 0
free db2
